<resources>
    <string name="app_name">背呗背单词</string>
    <string name="slogan">透过语境记住你</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_password">请输入密码</string>
    <string name="code_login">验证码登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="wechat_login">微信</string>
    <string name="qq_login">QQ</string>
    <string name="test_use">随便逛逛</string>
    <string name="please_write_down_phone">请填写您的手机号</string>
    <string name="register">注册</string>
    <string name="confirm">确定</string>
    <string name="click2register">点击注册</string>
    <string name="register2login">直接登录</string>
    <string name="find_password">找回密码</string>
    <string name="edit_code">请输入验证码</string>
    <string name="reload_code">重新获取验证码</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_remember">开始背单词</string>
    <string name="music_area_name">语境随身听</string>
    <string name="already_rememeber">已背单词</string>
    <string name="sign_in_daily">打卡</string>
    <string name="more_20">再来20个</string>
    <string name="already_handle">已掌握单词</string>
    <string name="non_ready">未背单词</string>
    <string name="show_meaning">释义</string>
    <string name="recover">Recover</string>
    <string name="pass">Pass</string>
    <string name="my_comment">我的评论</string>
    <string name="tips">提示</string>
    <string name="next">Next</string>
    <string name="my_plan">我的计划</string>
    <string name="tag_else">其它</string>
    <string name="tag_foreign">出国</string>
    <string name="tag_college">大学</string>
    <string name="tag_senior">高中</string>
    <string name="tag_junior">初中</string>
    <string name="tag_primary">小学</string>
    <string name="tag_hit">最热</string>
    <string name="setup_password">设置密码</string>
    <string name="home_header_pic_text">个小伙伴正在背单词\n快来加入吧！</string>
</resources>
