<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dff9ff"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context="com.example.carson.yjenglish.login.view.LoginActivity">

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/shape_round_rect_edit"
        android:hint="@string/edit_phone"
        android:textColor="#656565"
        android:textColorHint="@color/colorTextHint"
        android:paddingStart="18dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="10dp"
        android:textSize="18sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.carson.yjenglish.customviews.WithBtnEditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="7dp"
        app:btn_visible="false"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/code_login"
        android:textColor="@color/colorText"
        android:layout_marginStart="50dp"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/forget_password"
        android:textColor="@color/colorText"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@drawable/shape_round_rect_btn_sub"
        android:textColor="@android:color/white"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/tv_code_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@drawable/shape_round_rect_btn_main"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:textSize="18sp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="37dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    
    <Button
        android:id="@+id/btn_login_wechat"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@drawable/shape_round_rect_btn_wechat"
        android:drawableStart="@drawable/ic_cover"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:drawablePadding="5dp"
        android:textSize="15sp"
        android:text="@string/wechat_login"
        android:textColor="@android:color/white"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_login_qq"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:background="@drawable/shape_round_rect_btn_qq"
        android:drawableStart="@drawable/ic_cover"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:drawablePadding="5dp"
        android:textSize="15sp"
        android:text="@string/qq_login"
        android:textColor="@android:color/white"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:alpha="0.75"
        android:text="@string/test_use"
        android:layout_margin="7dp"
        android:background="@drawable/shape_round_rect_btn_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</android.support.constraint.ConstraintLayout>
