<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.example.carson.yjenglish.zone.view.plan.PlanAddAty">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        android:layout_marginStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="添加新计划"
        android:textColor="@color/colorTextWord"
        android:textAlignment="center"
        android:paddingTop="5dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        />

    <LinearLayout
        android:id="@+id/tag_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/back">

        <Button
            android:id="@+id/tag_hit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_hit"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

        <Button
            android:id="@+id/tag_primary"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_primary"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

        <Button
            android:id="@+id/tag_junior"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_junior"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

        <Button
            android:id="@+id/tag_senior"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_senior"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

        <Button
            android:id="@+id/tag_college"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_college"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/tag_linear">

        <Button
            android:id="@+id/tag_foreign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_foreign"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

        <Button
            android:id="@+id/tag_else"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="25dp"
            android:textColor="@color/colorAccent"
            android:text="@string/tag_else"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/selector_bg_tag_btn"
            />

        <View
            android:layout_width="0dp"
            android:layout_weight="3.8"
            android:layout_height="1dp" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/plan_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@id/tag_linear"/>

</android.support.constraint.ConstraintLayout>
