<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.carson.yjenglish.register.view.SetupPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_left"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_password"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

    </RelativeLayout>

    <com.example.carson.yjenglish.customviews.PasswordEditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_rect_edit"
        android:maxLength="11"
        android:inputType="phone"
        android:textSize="16sp"
        android:paddingTop="25dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:edit_hint="@string/edit_phone"
        android:drawablePadding="8dp"
        app:drawableStart="@drawable/ic_password_20dp"
        app:btn_visible="false"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/solid_half_circle_btn_main"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textColor="#e3ffffff"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="@id/edit_password"
        app:layout_constraintEnd_toEndOf="@id/edit_password"
        />

</android.support.constraint.ConstraintLayout>
