<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@android:color/white"
    tools:context="com.example.carson.yjenglish.login.view.ForgetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/forget_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_password"
            android:layout_centerInParent="true"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginBottom="1dp"
        android:background="#11d3d3d3"
        app:layout_constraintBottom_toTopOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#58d3d3d3"
        app:layout_constraintBottom_toTopOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.example.carson.yjenglish.customviews.PasswordEditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_round_rect_edit"
        android:maxLength="11"
        android:inputType="phone"
        android:textSize="16sp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:edit_hint="@string/edit_phone"
        android:drawablePadding="8dp"
        app:drawableStart="@drawable/ic_phone"
        app:btn_visible="false"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#61d3d3d3"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="1dp"
        android:background="#11d3d3d3"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/shape_round_rect_btn_main"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/confirm"
        android:textColor="#e3ffffff"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        app:layout_constraintStart_toStartOf="@id/edit_phone"
        app:layout_constraintEnd_toEndOf="@id/edit_phone"
        />

</android.support.constraint.ConstraintLayout>
