<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="390dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="10dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@android:color/white"
    android:layout_margin="10dp"
    app:cardElevation="5dp">

    <ImageView
        android:id="@+id/pic_bg"
        android:layout_width="match_parent"
        android:layout_height="241dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/home_header_img"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"/>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/learner_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPink"
            android:textSize="40sp"
            android:text="5,9446"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:maxLines="2"
            android:text="@string/home_header_pic_text"
            android:textColor="#424242"
            android:lineSpacingExtra="5dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="@id/learner_num"
            app:layout_constraintTop_toBottomOf="@id/learner_num"/>

        <!--加载多个头像-->
        <FrameLayout
            android:id="@+id/multi_portrait_view"
            android:layout_width="120dp"
            android:layout_height="22dp"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toBottomOf="@id/learner_num"
            app:layout_constraintStart_toStartOf="@id/learner_num"
            />

        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/solid_half_circle_btn_main"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:text="@string/start_remember"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="261dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#e7e7e7"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/btn_start" />

        <RelativeLayout
            android:id="@+id/to_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            app:layout_constraintTop_toBottomOf="@id/btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            
            <ImageView
                android:background="@mipmap/ic_music"
                android:layout_width="55dp"
                android:layout_height="55dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="75dp"
                android:textSize="16sp"
                android:text="@string/music_area_name"
                android:textColor="#424242"
                />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_arrow_right"
                android:layout_alignParentEnd="true"
                />
            
        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>



</android.support.v7.widget.CardView>